syntax = "proto3";

package temporal.server.chasm.lib.nexusoperation.proto.v1;

option go_package = "go.temporal.io/server/chasm/lib/nexusoperation/gen/nexusoperationpb;nexusoperationpb";

message InvocationTask {
  int32 attempt = 1;
}

message InvocationTimeoutTask {
  int32 attempt = 1;
}

message InvocationBackoffTask {
  int32 attempt = 1;
}

message CancellationTask {
  int32 attempt = 1;
}

message CancellationBackoffTask {
  int32 attempt = 1;
}